crates/toml/tests/snapshots/invalid/ext/table/quoted-unclosed-2.stderr
TOML parse error at line 1, column 7
  |
1 | [''']
  |       ^
unclosed table, expected `]`

---
TOML parse error at line 1, column 2
  |
1 | [''']
  |  ^^^^
keys cannot be multi-line literal strings, expected basic string, literal string

---
TOML parse error at line 1, column 7
  |
1 | [''']
  |       ^
invalid multi-line literal string, expected `'`
